Added network connection error when join

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -679,5 +679,5 @@
     <string name="permission_dialog_string_call_logs_two" description="runtime permission dialog call logs second text">access your phone call logs</string>
 
     <!--  After translation  -->
-    <string name="no_internet_connection_error" description="Error message for no internet connection">PrivaDroid needs Internet connection.</string>
+    <string name="no_internet_connection_error" description="Error message for no internet connection">PrivaDroid needs network connection to work properly.</string>
 </resources>
