Aquire user consent only once

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -692,4 +692,6 @@
     <string name="privadroid_package_name">com.weichengcao.privadroid</string>
 
     <string name="select_multiple_allowed">Select one or more options</string>
+
+    <string name="google_ad_id">ca-app-pub-1063585474940344~2699806720</string>
 </resources>
